# mygfs

./: README.md
cpp/: CMakeLists.txt
cpp/proto/: gfs.proto
cpp/script/: kill_chunk_server.sh  run.sh  start_chunk_server.sh
cpp/src/chunk/: chunk_client.cc  chunk_client.h  chunk_server.cc  chunk_server.h  disk_manager.cc  disk_manager.h  page.cc  page.h
cpp/src/gfs/: client.cc  client.h  context.cc  context.h  file_context.cc  file_context.h
cpp/src/master/: chunk_route.cc  chunk_route.h  file_info.cc  file_info.h  master_client.cc  master_client.h  master_server.cc  master_server.h
cpp/src/util/: conf.h  lock.cc  lock.h  lru.hpp  state_code.cc  state_code.h  time.cc  time.h
cpp/test/chunk_client_test/: CMakeLists.txt  chunk_client_test.cc
cpp/test/chunk_server_test/: CMakeLists.txt  chunk_server_test.cc
cpp/test/gfs_test/: CMakeLists.txt  gfs_test.cc
cpp/test/init/: CMakeLists.txt  init.cc
cpp/test/master_client_test/: CMakeLists.txt  master_client_test.cc
cpp/test/master_server_test/: CMakeLists.txt  master_server_test.cc
cpp/test/page_test/: CMakeLists.txt  page_test.cc
docs/: cpp.md
docs/6.824/: GFS.md
